--- a/saibende/pom.xml
+++ b/saibende/pom.xml
@@ -55,6 +55,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.apache.poi</groupId>
+   			<artifactId>poi-ooxml</artifactId>
+    		<version>5.2.3</version> <!-- Ensure you have the latest version -->
+		</dependency>
+		<dependency>
     <groupId>com.opencsv</groupId>
     <artifactId>opencsv</artifactId>
     <version>5.6</version>
